add index false for do not showing generated csv file

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -337,7 +337,7 @@
    "outputs": [],
    "source": [
     "d[\"prices\"] = prices\n",
-    "d.to_csv(\"predicts.csv\")"
+    "d.to_csv(\"predicts.csv\", index=False)"
    ]
   },
   {
